# IMS-project

./: .gitignore  CMakeLists.txt  Makefile  Patch.h  Plantation.cpp  Plantation.h  PlantationPatch.cpp  PlantationPatch.h  ProcessableWood.cpp  ProcessableWood.h  RainforestPatch.cpp  RainforestPatch.h  RandomGenerator.h  Simulation.cpp  Simulation.h  WoodStorage.h  doc.docx  links.txt  main.cpp
experiments/: actual  actual_100.csv  actual_30.csv  experiment_1.conf  experiment_1.csv  experiment_1.txt  experiment_2.conf  experiment_2.csv  experiment_2.txt  experiment_3.conf  experiment_3.csv  experiment_3.txt  experiment_4.conf  experiment_4.csv  experiment_4.txt  experiment_5.conf  experiment_5.csv  experiment_5.txt  experiment_6.conf  experiment_6.csv  experiment_6.txt  forest_ww_minimalize  forest_ww_minimalize_100.csv  palm_ww_minimalize  palm_ww_minimalize_100.csv  short_rotation  short_rotation_100.csv
src/: Patch.cpp  Patch.h  Plantation.cpp  Plantation.h  PlantationPatch.cpp  RainforestPatch.cpp  RandomGenerator.cpp  Simulation.cpp  Simulation.h  WoodStorage.cpp  WoodStorage.h  main.cpp
